# planners_brubotics

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: chomp_planning.yaml  joint_limits.yaml  ompl_planning.yaml  quadrotor.srdf  sensors_3d.yaml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
launch/: add_objects.launch  chomp_planning_pipeline.launch.xml  custom_rviz.rviz  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  execute.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  load_octomap.launch  move_group.launch  moveit.rviz  mrs_commander.launch  octomap_mapping.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  python_interface.launch  quadrotor_moveit_controller_manager.launch.xml  quadrotor_moveit_sensor_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  state_publisher.launch  trajectory_execution.launch.xml  warehouse.launch
maps/: Maze.bt  README.md  simple_maze_octomap.bt
plotjuggler/: vizualize_pv_pr.xml  vizualize_pv_pr_allpaths.xml
robots_description/: README.md
robots_description/urdf/: armlike_quadrotor_base.urdf.xacro  quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_gripper.urdf.xacro
rviz/: camera_test.rviz
scripts/: add_objects.py  add_objects_big_maze.py  add_objects_final_experiment.py  mrs_commander.py  python_interface.py  state_publisher.py
src/moveit_config/: .setup_assistant  package.xml
src/moveit_planner/: CMakeLists.txt  package.xml
(+75 files in other folders)
